Changed area and effort to use tags. Changed feature tag names. Updated Readme.

--- a/assets/iframe.html
+++ b/assets/iframe.html
@@ -39,24 +39,24 @@
           <legend class="c-txt__label u-mt-xs product-header">Support</legend>
           <div class="u-mb-xxs">
             <div>
-              <input class="c-chk__input" id="dsapp_api_support" name="feature-area" type="radio" value="dsapp_api_support">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_api_support">API</label>
+              <input class="c-chk__input" id="dsapp_dev_api_support" name="feature-area" type="radio" value="dsapp_dev_api_support">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_dev_api_support">API</label>
             </div>
             <div>
-              <input class="c-chk__input" id="dsapp_zaf_support" name="feature-area" type="radio" value="dsapp_zaf_support">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_zaf_support">Support apps (ZAF)</label>
+              <input class="c-chk__input" id="dsapp_dev_zaf_support" name="feature-area" type="radio" value="dsapp_dev_zaf_support">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_dev_zaf_support">Support apps (ZAF)</label>
             </div>
             <div>
-              <input class="c-chk__input" id="dsapp_sdk_support" name="feature-area" type="radio" value="dsapp_sdk_support">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_sdk_support">Mobile Support SDK</label>
+              <input class="c-chk__input" id="dsapp_dev_sdk_support" name="feature-area" type="radio" value="dsapp_dev_sdk_support">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_dev_sdk_support">Mobile Support SDK</label>
             </div>
             <div>
-              <input class="c-chk__input" id="dsapp_app_marketplace" name="feature-area" type="radio" value="dsapp_app_marketplace">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_app_marketplace">App Marketplace publishing</label>
+              <input class="c-chk__input" id="dsapp_dev_app_marketplace" name="feature-area" type="radio" value="dsapp_dev_app_marketplace">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_dev_app_marketplace">App Marketplace publishing</label>
             </div>
             <div>
-              <input class="c-chk__input" id="dsapp_api_clients" name="feature-area" type="radio" value="dsapp_api_clients">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_api_clients">API
+              <input class="c-chk__input" id="dsapp_dev_api_clients" name="feature-area" type="radio" value="dsapp_dev_api_clients">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_dev_api_clients">API
                 Clients (PHP, Ruby, etc)</label>
             </div>
           </div>
@@ -64,20 +64,20 @@
           <legend class="c-txt__label u-mt-xs product-header">Chat</legend>
           <div class="u-mb-xxs">
             <div>
-              <input class="c-chk__input" id="dsapp_api_chat" name="feature-area" type="radio" value="dsapp_api_chat">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_api_chat">API</label>
+              <input class="c-chk__input" id="dsapp_dev_api_chat" name="feature-area" type="radio" value="dsapp_dev_api_chat">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_dev_api_chat">API</label>
             </div>
             <div>
-              <input class="c-chk__input" id="dsapp_zaf_chat" name="feature-area" type="radio" value="dsapp_zaf_chat">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_zaf_chat">Chat apps (ZAF)</label>
+              <input class="c-chk__input" id="dsapp_dev_zaf_chat" name="feature-area" type="radio" value="dsapp_dev_zaf_chat">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_dev_zaf_chat">Chat apps (ZAF)</label>
             </div>
             <div>
-              <input class="c-chk__input" id="dsapp_sdk_chat" name="feature-area" type="radio" value="dsapp_sdk_chat">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_sdk_chat">Mobile Chat SDK</label>
+              <input class="c-chk__input" id="dsapp_dev_sdk_chat" name="feature-area" type="radio" value="dsapp_dev_sdk_chat">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_dev_sdk_chat">Mobile Chat SDK</label>
             </div>
             <div>
-              <input class="c-chk__input" id="dsapp_api_chat_convo" name="feature-area" type="radio" value="dsapp_api_chat_convo">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_api_chat_convo">Chat
+              <input class="c-chk__input" id="dsapp_dev_api_chat_conversations" name="feature-area" type="radio" value="dsapp_dev_api_chat_conversations">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_dev_api_chat_conversations">Chat
                 Conversations API</label>
             </div>
           </div>
@@ -87,20 +87,24 @@
           <div class="u-mb-xxs">
             <legend class="c-txt__label u-mt-xs product-header">Talk</legend>
             <div>
-              <input class="c-chk__input" id="dsapp_api_talk" name="feature-area" type="radio" value="dsapp_api_talk">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_api_talk">API</label>
+              <input class="c-chk__input" id="dsapp_dev_api_talk" name="feature-area" type="radio" value="dsapp_dev_api_talk">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_dev_api_talk">API</label>
             </div>
             <div>
-              <input class="c-chk__input" id="dsapp_tpe_talk" name="feature-area" type="radio" value="dsapp_tpe_talk">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_tpe_talk">Talk Partner Edition (CTI)</label>
+              <input class="c-chk__input" id="dsapp_dev_tpe_talk" name="feature-area" type="radio" value="dsapp_dev_tpe_talk">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_dev_tpe_talk">Talk Partner Edition (CTI)</label>
             </div>
           </div>
           <!--Guide-->
           <div class="u-mb-xxs">
             <legend class="c-txt__label u-mt-xs product-header">Guide</legend>
             <div>
-              <input class="c-chk__input" id="dsapp_guide_customization" name="feature-area" type="radio" value="dsapp_guide_customization">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_guide_customization">Guide/Gather
+              <input class="c-chk__input" id="dsapp_dev_api_guide" name="feature-area" type="radio" value="dsapp_dev_api_guide">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_dev_api_guide">API</label>
+            </div>
+            <div>
+              <input class="c-chk__input" id="dsapp_dev_guide_customization" name="feature-area" type="radio" value="dsapp_dev_guide_customization">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_dev_guide_customization">Guide/Gather
                 customization</label>
             </div>
           </div>
@@ -108,12 +112,12 @@
           <div class="u-mb-xxs">
             <legend class="c-txt__label u-mt-xs product-header">Sell</legend>
             <div>
-              <input class="c-chk__input" id="dsapp_api_sell" name="feature-area" type="radio" value="dsapp_api_sell">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_api_sell">API</label>
+              <input class="c-chk__input" id="dsapp_dev_api_sell" name="feature-area" type="radio" value="dsapp_dev_api_sell">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_dev_api_sell">API</label>
             </div>
             <div>
-              <input class="c-chk__input" id="dsapp_zaf_sell" name="feature-area" type="radio" value="dsapp_zaf_sell">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_zaf_sell">Sell apps (ZAF)</label>
+              <input class="c-chk__input" id="dsapp_dev_zaf_sell" name="feature-area" type="radio" value="dsapp_dev_zaf_sell">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_dev_zaf_sell">Sell apps (ZAF)</label>
             </div>
           </div>
         </div>
@@ -122,23 +126,23 @@
           <div class="u-mb-xxs">
             <legend class="c-txt__label u-mt-xs product-header">Sunshine</legend>
             <div>
-              <input class="c-chk__input" id="dsapp_sunshine_co" name="feature-area" type="radio" value="dsapp_sunshine_co">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_sunshine_co">Custom
+              <input class="c-chk__input" id="dsapp_dev_sunshine_customobjects" name="feature-area" type="radio" value="dsapp_dev_sunshine_customobjects">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_dev_sunshine_customobjects">Custom
                 Objects</label>
             </div>
             <div>
-              <input class="c-chk__input" id="dsapp_sunshine_pande" name="feature-area" type="radio" value="dsapp_sunshine_pande">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_sunshine_pande">Profiles
+              <input class="c-chk__input" id="dsapp_dev_sunshine_profileandevents" name="feature-area" type="radio" value="dsapp_dev_sunshine_profileandevents">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_dev_sunshine_profileandevents">Profiles
                 and
                 Events</label>
             </div>
             <div>
-              <input class="c-chk__input" id="dsapp_sunshine_convo" name="feature-area" type="radio" value="dsapp_sunshine_convo">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_sunshine_convo">Conversations</label>
+              <input class="c-chk__input" id="dsapp_dev_sunshine_conversations" name="feature-area" type="radio" value="dsapp_dev_sunshine_conversations">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_dev_sunshine_conversations">Conversations</label>
             </div>
             <div>
-              <input class="c-chk__input" id="dsapp_sunshine_eventsbridge" name="feature-area" type="radio" value="dsapp_sunshine_eventsbridge">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_sunshine_eventsbridge">AWS
+              <input class="c-chk__input" id="dsapp_dev_sunshine_eventsbridge" name="feature-area" type="radio" value="dsapp_dev_sunshine_eventsbridge">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_dev_sunshine_eventsbridge">AWS
                 Events
                 BridgeChannels Framework</label>
             </div>
@@ -148,8 +152,8 @@
             <legend class="c-txt__label u-mt-xs product-header">Widget</legend>
             <div class="u-mb-xxs">
               <div>
-                <input class="c-chk__input" id="dsapp_widget" name="feature-area" type="radio" value="dsapp_widget">
-                <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_widget">Widget customization</label>
+                <input class="c-chk__input" id="dsapp_dev_widget" name="feature-area" type="radio" value="dsapp_dev_widget">
+                <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_dev_widget">Widget customization</label>
               </div>
             </div>
           </div>
@@ -157,8 +161,8 @@
           <div class="u-mb-xxs">
             <legend class="c-txt__label u-mt-xs product-header">Other</legend>
             <div>
-              <input class="c-chk__input" id="dsapp_other" name="feature-area" type="radio" value="dsapp_other">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_other">Other dev platform area</label>
+              <input class="c-chk__input" id="dsapp_dev_other" name="feature-area" type="radio" value="dsapp_dev_other">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_dev_other">Other dev platform area</label>
             </div>
           </div>
         </div>
@@ -185,22 +189,22 @@
         <div class="row u-pl-sm u-pt-lg">
           <div class="col-">
             <div class="u-pl-sm u-pt-xxs">
-              <input class="c-chk__input" id="effort1" name="effort-rating" type="radio" value="1">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="effort1">Low
+              <input class="c-chk__input" id="dsapp_effort_low" name="effort-rating" type="radio" value="dsapp_effort_low">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_effort_low">Low
               </label>
             </div>
           </div>
           <div class="col-">
             <div class="u-pl-sm u-pt-xxs">
-              <input class="c-chk__input" id="effort2" name="effort-rating" type="radio" value="2">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="effort2">Medium
+              <input class="c-chk__input" id="dsapp_effort_medium" name="effort-rating" type="radio" value="dsapp_effort_medium">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_effort_medium">Medium
               </label>
             </div>
           </div>
           <div class="col-">
             <div class="u-pl-sm u-pt-xxs">
-              <input class="c-chk__input" id="effort3" name="effort-rating" type="radio" value="3">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="effort3">High
+              <input class="c-chk__input" id="dsapp_effort_high" name="effort-rating" type="radio" value="dsapp_effort_high">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_effort_high">High
               </label>
             </div>
           </div>
