Removed Sunshine Eventsbridge, changed working on "other" selection

--- a/assets/iframe.html
+++ b/assets/iframe.html
@@ -140,12 +140,6 @@
               <input class="c-chk__input" id="dsapp_dev_sunshine_conversations" name="feature-area" type="radio" value="dsapp_dev_sunshine_conversations">
               <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_dev_sunshine_conversations">Conversations</label>
             </div>
-            <div>
-              <input class="c-chk__input" id="dsapp_dev_sunshine_eventsbridge" name="feature-area" type="radio" value="dsapp_dev_sunshine_eventsbridge">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_dev_sunshine_eventsbridge">AWS
-                Events
-                BridgeChannels Framework</label>
-            </div>
           </div>
           <!--Widget-->
           <div class="u-mb-xxs">
@@ -162,7 +156,7 @@
             <legend class="c-txt__label u-mt-xs product-header">Other</legend>
             <div>
               <input class="c-chk__input" id="dsapp_dev_other" name="feature-area" type="radio" value="dsapp_dev_other">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_dev_other">Other dev platform area</label>
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_dev_other">Other dev related discussion</label>
             </div>
           </div>
         </div>
